--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             
               
             <h1>To Do List App First Brainstorm</h1>
-            <h2>Date:</h2> <p>April 10, 2024</p>
-            <h3>Members:</h3> <p> Emily (Team Lead), Bob  (Developer), James (Developer), Camila(Designer)</p>
+            <h2>Date:</h2> 
+            <p>April 10, 2024</p>
+            <h3>Members:</h3> 
+            <p>Emily (Team Lead), Bob  (Developer), James (Developer), Camila(Designer)</p>
                 <nav>
                     <a href="#Agenda/">Agenda</a> <br>
                     <a href="#UnfinishedBusinessfromtheLastMeeting">Unfinished Business from the Last Meeting</a> <br>
