--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Date:</h2> 
             <p>April 10, 2024</p>
             <h3>Members:</h3> 
-            <p>Emily (Team Lead), Bob  (Developer), James (Developer), Camila(Designer)</p>
+            <p>Emily (Team Lead), Bob  (Developer), James (Developer), Camila(Designer)</p>)
                 <nav>
                     <a href="#Agenda/">Agenda</a> <br>
                     <a href="#UnfinishedBusinessfromtheLastMeeting">Unfinished Business from the Last Meeting</a> <br>
