update favicon link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>To Do List App First Brainstorm</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/screenshots/favicon.ico?">
+    <link rel="icon" type="image/x-icon" href="./screenshots/favicon.ico?">
     <link rel="manifest" href="/screenshots/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
