--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <title>To Do List App First Brainstorm</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <style>
+        h1, h3 {
+            font-family: 'Lobster';
+            font-size: 20px; 
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./screenshots/favicon.ico?">
@@ -66,7 +74,7 @@
                 <h3>Diagrams</h3>
                 <details>
                     <summary>The diagrams, video and audio files! <b>OPEN THE ARROW </b></summary>
-                    <img src="screenshots/diagram.jpeg" alt="Workplace Procrastination Statistics">
+                    <img src="screenshots/diagram.jpeg" alt="Workplace Procrastination Statistics" width="320" height="240">
                     <p>We see a diagram showing the percentage of people who <b>procrastinate</b>. We can use it in our marketing strategy</p>
                     <br>
                     <p>This is the video about time management. We can also add this to the strategy! </p>
