--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        p {
+            color: gray;
+        }
+        .important {
+            color: red;
+            font-weight: bold;
+        }
+    </style> 
     <link rel="icon" type="image/x-icon" href="./screenshots/favicon.ico?">
     <link rel="manifest" href="/screenshots/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -69,6 +82,10 @@
                         <li>We need to think about future <em>marketing strategy</em></li>
                     </ul>
             </section>
+            <p style="color: rgb(63, 146, 122); font-size: 16px; background-color: yellow;">
+                This is inline CSS :)
+              </p>
+              
 
             <section id ="Diagrams">
                 <h3>Diagrams</h3>
